--- a/assignments/assignment_3/assignment_3_cs22b1093.ipynb
+++ b/assignments/assignment_3/assignment_3_cs22b1093.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,16 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7147e03f5c90>"
+       "<matplotlib.image.AxesImage at 0x780cbf9968f0>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -73,11 +73,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Predefined rotation using OpenCV's built-in interpoltion\n",
     "def rotate_image_predefined(image, angle):\n",
     "    (h, w) = image.shape[:2]\n",
     "    center = (w // 2, h // 2)\n",
@@ -88,11 +87,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Custom rotation function using bilinear interpolation (ANTI-CLOCKWISE)\n",
     "def rotate_image_custom_bilinear(image, angle):\n",
     "    (h, w) = image.shape[:2]\n",
     "    center_x, center_y = w / 2, h / 2\n",
@@ -100,30 +98,23 @@
     "    rad = np.radians(angle)\n",
     "    cosA, sinA = np.cos(rad), np.sin(rad)\n",
     "\n",
-    "    # Create an output image of the same shape\n",
     "    rotated = np.zeros_like(image)\n",
     "\n",
-    "    # Iterate over each pixel in the destination image\n",
     "    for i in range(h):\n",
     "        for j in range(w):\n",
-    "            # Compute coordinates relative to the center\n",
     "            x = j - center_x\n",
     "            y = i - center_y\n",
     "\n",
-    "            # Apply the inverse rotation (for anticlockwise rotation)\n",
     "            src_x = cosA * x - sinA * y + center_x\n",
     "            src_y = sinA * x + cosA * y + center_y\n",
     "\n",
-    "            # Check if the source coordinates fall within image bounds\n",
     "            if 0 <= src_x < w - 1 and 0 <= src_y < h - 1:\n",
     "                x0, y0 = int(np.floor(src_x)), int(np.floor(src_y))\n",
     "                x1, y1 = x0 + 1, y0 + 1\n",
     "\n",
-    "                # Compute the fractional parts\n",
     "                a = src_x - x0\n",
     "                b = src_y - y0\n",
     "\n",
-    "                # Perform bilinear interpolation for each color channel\n",
     "                for c in range(image.shape[2]):\n",
     "                    value = (1 - a) * (1 - b) * image[y0, x0, c] + \\\n",
     "                            a * (1 - b) * image[y0, x1, c] + \\\n",
@@ -138,16 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to detect the tower's inclination by drawing representative lines\n",
     "def detect_inclination(image):\n",
     "    gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
     "    edges = cv2.Canny(gray, 50, 150, apertureSize=3)\n",
     "\n",
-    "    # Detect lines using Hough transform\n",
     "    lines = cv2.HoughLinesP(edges, 1, np.pi / 180, threshold=80, minLineLength=100, maxLineGap=10)\n",
     "    line_image = image.copy()\n",
     "    vertical_lines = []\n",
@@ -160,7 +149,6 @@
     "        x1, y1, x2, y2 = line[0]\n",
     "        cv2.line(line_image, (x1, y1), (x2, y2), (0, 255, 0), 1)\n",
     "        \n",
-    "        # Compute the angle of the line\n",
     "        angle_line = np.degrees(np.arctan2((y2 - y1), (x2 - x1)))\n",
     "        if angle_line < 0:\n",
     "            angle_line += 180\n",
@@ -178,12 +166,10 @@
     "        print(f\"Weighted average line angle: {avg_angle:.2f}°\")\n",
     "        print(f\"Estimated inclination from vertical: {inclination:.2f}°\")\n",
     "        \n",
-    "        # Draw a vertical line at the center of the image\n",
     "        (h, w) = image.shape[:2]\n",
     "        center = (w // 2, h // 2)\n",
     "        cv2.line(line_image, (center[0], 0), (center[0], h), (0, 0, 255), 2)\n",
     "\n",
-    "        # Draw a line representing the inclination\n",
     "        length_line = 300\n",
     "        theta = np.radians(avg_angle)\n",
     "        pt1 = (int(center[0] - length_line * np.cos(theta)), int(center[1] - length_line * np.sin(theta)))\n",
@@ -201,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
